{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 958,
  "lineage": "c915cef7-27dd-02c6-5c8a-5d521174a9d9",
  "resources": [
    {
      "module": "module.master_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc0ac921efee9f9d",
            "arn": "arn:aws:ec2:eu-west-1:977098995259:instance/i-0394fda65c4aafcb9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-k8s-cluster-Instance-Profile",
            "id": "i-0394fda65c4aafcb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-k8s-cluster-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-022a8c91ab4785a21",
            "private_dns": "ip-10-0-1-37.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-108-129-171-52.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.129.171.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0138c4aef99ef226e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b48692360606538",
            "tags": {
              "Name": "my-k8s-cluster-controlplane"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-controlplane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d2cd4ba89ca6c8b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_instance_profile",
            "aws_iam_role.ec2_k8s_role",
            "aws_key_pair.generated_key",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_security_group.kubernetes_master_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available",
            "tls_private_key.k8s_key"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:internet-gateway/igw-02e0786feb650e978",
            "id": "igw-02e0786feb650e978",
            "owner_id": "977098995259",
            "tags": {
              "Name": "my-k8s-cluster-igw"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-igw"
            },
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:route-table/rtb-037e7a798c2f7fd02",
            "id": "rtb-037e7a798c2f7fd02",
            "owner_id": "977098995259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e0786feb650e978",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-k8s-cluster-public-rt"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bed923ccff1ef4db",
            "route_table_id": "rtb-037e7a798c2f7fd02",
            "subnet_id": "subnet-08b48692360606538"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fd9020ff4204b89",
            "route_table_id": "rtb-037e7a798c2f7fd02",
            "subnet_id": "subnet-0e6f0a9c7f1979840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:security-group/sg-02d2cd4ba89ca6c8b",
            "description": "Security group for Kubernetes Master nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d2cd4ba89ca6c8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Calico Pod network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "etcd client \u0026 peer communication",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              }
            ],
            "name": "my-k8s-cluster-master-sg",
            "name_prefix": "",
            "owner_id": "977098995259",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/my-k8s-cluster": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/my-k8s-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:security-group/sg-0a434e25c16dc7a7a",
            "description": "Security group for Kubernetes Worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a434e25c16dc7a7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Calico Pod network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic from Master SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02d2cd4ba89ca6c8b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my-k8s-cluster-worker-sg",
            "name_prefix": "",
            "owner_id": "977098995259",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/my-k8s-cluster": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/my-k8s-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.kubernetes_master_sg",
            "module.vpc.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:subnet/subnet-08b48692360606538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b48692360606538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977098995259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-k8s-cluster-public-subnet-1"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-public-subnet-1"
            },
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:subnet/subnet-0e6f0a9c7f1979840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6f0a9c7f1979840",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977098995259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-k8s-cluster-public-subnet-2"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-public-subnet-2"
            },
            "vpc_id": "vpc-06d585cfb52cb7e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:977098995259:vpc/vpc-06d585cfb52cb7e92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a8e53d9c6255793d",
            "default_route_table_id": "rtb-053988697385ff727",
            "default_security_group_id": "sg-007733036d8ce346a",
            "dhcp_options_id": "dopt-009d0ecdfc455e2ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d585cfb52cb7e92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053988697385ff727",
            "owner_id": "977098995259",
            "tags": {
              "Name": "my-k8s-cluster-vpc"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.worker_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc0ac921efee9f9d",
            "arn": "arn:aws:ec2:eu-west-1:977098995259:instance/i-0c65bd7dbb3dd0610",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-k8s-cluster-Instance-Profile",
            "id": "i-0c65bd7dbb3dd0610",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-k8s-cluster-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f9dc4f7a772012a",
            "private_dns": "ip-10-0-1-246.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-3-254-81-185.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.254.81.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6cf9a7155e033bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b48692360606538",
            "tags": {
              "Name": "my-k8s-cluster-worker-1"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a434e25c16dc7a7a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_instance_profile",
            "aws_iam_role.ec2_k8s_role",
            "aws_key_pair.generated_key",
            "data.aws_ami.ubuntu",
            "data.local_file.kubeadm_join_command_file",
            "data.local_file.kubeconfig_master_file",
            "local_file.k8s_private_key_file",
            "module.master_node.aws_instance.master",
            "module.master_node.null_resource.master_setup",
            "module.vpc.aws_security_group.kubernetes_master_sg",
            "module.vpc.aws_security_group.kubernetes_worker_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available",
            "null_resource.set_private_key_permissions",
            "tls_private_key.k8s_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc0ac921efee9f9d",
            "arn": "arn:aws:ec2:eu-west-1:977098995259:instance/i-068a7e417b6189e1f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-k8s-cluster-Instance-Profile",
            "id": "i-068a7e417b6189e1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-k8s-cluster-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ff9cfdae766e3ab",
            "private_dns": "ip-10-0-2-27.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.27",
            "public_dns": "ec2-34-252-245-213.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.245.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6b30ad03a141f88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6f0a9c7f1979840",
            "tags": {
              "Name": "my-k8s-cluster-worker-2"
            },
            "tags_all": {
              "Name": "my-k8s-cluster-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a434e25c16dc7a7a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_instance_profile",
            "aws_iam_role.ec2_k8s_role",
            "aws_key_pair.generated_key",
            "data.aws_ami.ubuntu",
            "data.local_file.kubeadm_join_command_file",
            "data.local_file.kubeconfig_master_file",
            "local_file.k8s_private_key_file",
            "module.master_node.aws_instance.master",
            "module.master_node.null_resource.master_setup",
            "module.vpc.aws_security_group.kubernetes_master_sg",
            "module.vpc.aws_security_group.kubernetes_worker_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.kubernetes_vpc",
            "module.vpc.data.aws_availability_zones.available",
            "null_resource.set_private_key_permissions",
            "tls_private_key.k8s_key"
          ]
        }
      ]
    }
  ]
}